...
                
                Row {
                    IconButton(onClick = onEdit) {
                        Icon(Icons.Default.Edit, "Edit amount")
                    }
                    IconButton(onClick = onDelete) {
                        Icon(Icons.Default.Delete, "Remove from portfolio")
                    }
                }
            }
        }
    }
}
...
